# routes/usuarioRoute.js
@@ -1,37 +1,37 @@
 import express from 'express';
 import UsuarioController from '../controllers/usuarioController.js';
+import AuthMiddleware from '../middlewares/authMiddleware.js';
 
 const router = express.Router();
 let ctrl = new UsuarioController();
-
-router.get("/usuario", (req, res) => {
-    // #swagger.tags = ['Usuarios']
-    // #swagger.summary = "Endpoint para listar todos os usuarios do banco de dados"
-    ctrl.listar(req, res)
+let authMiddleware = new AuthMiddleware();
+router.get("/usuario", authMiddleware.validar, (req, res) => {
+    // #swagger.tags = ['Usuários']
+    // #swagger.summary = "Endpoint para listar todos os usuários do banco de dados"
+    ctrl.listar(req, res);
 });
-
-router.post("/usuario", (req, res) => { 
-    // #swagger.tags = ['Usuarios']
-    // #swagger.summary = "Endpoint para cadastrar um usuario no banco de dados"
-    ctrl.cadastrar(req, res)
+router.post("/usuario", (req, res) => {
+    // #swagger.tags = ['Usuários']
+    // #swagger.summary = "Cadastra um usuário no banco de dados"
+    ctrl.cadastrar(req, res);
 });
+router.put("/usuario", (req, res) => {
+    // #swagger.tags = ['Usuários']
+    // #swagger.summary = "Atualiza um usuário através das informações enviadas"
 
+    ctrl.alterar(req, res);
+});
 router.delete("/usuario/:codigo", (req, res) => {
-    // #swagger.tags = ['Usuarios']
-    // #swagger.summary = "Endpoint para deletar um usuario do banco de dados"
-    ctrl.excluir(req, res)
+    // #swagger.tags = ['Usuários']
+    // #swagger.summary = "Exclui um usuário especificado através do parâmetro
+
+    ctrl.excluir(req, res);
+});
+router.get("/usuario/:codigo", (req, res) => {
+    // #swagger.tags = ['Usuários']
+    // #swagger.summary = "Retorna um usuário especificado através do parâmetro"
+    ctrl.obter(req, res);
 });
 
-router.get("/usuario/:codigo", (req, res) => { 
-    // #swagger.tags = ['Usuarios']
-    // #swagger.summary = "Endpoint para obter um usuario do banco de dados"
-    ctrl.obter(req, res)
-});
-
-router.put("/usuario/:codigo", (req, res) => {
-    // #swagger.tags = ['Usuarios']
-    // #swagger.summary = "Endpoint para alterar um usuario do banco de dados"
-    ctrl.alterar(req, res)
-});
 
 export default router;
